--- a/DeezerProyecto/app/src/main/res/layout/activity_register.xml
+++ b/DeezerProyecto/app/src/main/res/layout/activity_register.xml
@@ -36,8 +36,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Correo electrónico"
                 android:inputType="textEmailAddress"
-                android:textColor="@android:color/white"
-                android:textColorHint="#AAAAAA"
+                android:textColor="@color/colorTexto"
+                android:textColorHint="@color/colorGris"
                 android:background="@drawable/fondo_campo_redondeado"
                 android:padding="14dp"
                 android:drawableStart="@android:drawable/ic_dialog_email"
@@ -51,8 +51,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Contraseña"
                 android:inputType="textPassword"
-                android:textColor="@android:color/white"
-                android:textColorHint="#AAAAAA"
+                android:textColor="@color/colorTexto"
+                android:textColorHint="@color/colorGris"
                 android:background="@drawable/fondo_campo_redondeado"
                 android:padding="14dp"
                 android:drawableStart="@android:drawable/ic_lock_lock"
@@ -66,8 +66,8 @@
                 android:layout_height="wrap_content"
                 android:hint="Repetir contraseña"
                 android:inputType="textPassword"
-                android:textColor="@android:color/white"
-                android:textColorHint="#AAAAAA"
+                android:textColor="@color/colorTexto"
+                android:textColorHint="@color/colorGris"
                 android:background="@drawable/fondo_campo_redondeado"
                 android:padding="14dp"
                 android:drawableStart="@android:drawable/ic_lock_lock"
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:text="Registrarse"
                 android:backgroundTint="@color/colorVerdeSpotify"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorTextoBoton"
                 android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
