--- a/DeezerProyecto/app/src/main/res/layout/item_artista_sugerido.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_artista_sugerido.xml
@@ -23,7 +23,7 @@
         android:layout_gravity="bottom"
         android:padding="12dp"
         android:text="Nombre"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTextoGeneral"
         android:textSize="16sp"
         android:textStyle="bold"
         android:background="#99000000" />
