--- a/DeezerProyecto/app/src/main/res/layout/item_biblioteca.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_biblioteca.xml
@@ -24,7 +24,7 @@
             android:id="@+id/nombrePlaylist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:textSize="16sp"
             android:textStyle="bold" />
 
