--- a/DeezerProyecto/app/src/main/res/layout/fragment_biblioteca.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_biblioteca.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="Tu biblioteca"
         android:textSize="22sp"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTexto"
         android:textStyle="bold"
         android:layout_marginBottom="8dp" />
 
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Buscar en tus playlists..."
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTexto"
         android:textColorHint="@android:color/darker_gray"
         android:backgroundTint="@color/colorGris"
         android:drawableStart="@android:drawable/ic_menu_search"
