--- a/DeezerProyecto/app/src/main/res/layout/fragment_buscar.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_buscar.xml
@@ -23,7 +23,7 @@
             android:layout_weight="1"
             android:hint="Buscar canciones..."
             android:background="@drawable/fondo_campo_redondeado"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTextoGeneral"
             android:textColorHint="@android:color/darker_gray"
             android:paddingHorizontal="16dp"/>
 
@@ -34,7 +34,7 @@
             android:text="Buscar"
             android:layout_marginStart="8dp"
             android:backgroundTint="@color/colorVerdeSpotify"
-            android:textColor="@android:color/white"/>
+            android:textColor="@color/colorTexto"/>
     </LinearLayout>
 
     <!-- CONTENIDO -->
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Artistas sugeridos"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginBottom="8dp" />
