--- a/DeezerProyecto/app/src/main/res/layout/fragment_buscar_amigos.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_buscar_amigos.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:padding="12dp"
         android:hint="Buscar por correo"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTexto"
         android:textColorHint="#888888"
         android:inputType="textEmailAddress" />
 
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Amigos sugeridos"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTexto"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_marginTop="24dp"
