--- a/DeezerProyecto/app/src/main/res/layout/fragment_crear_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_crear_playlist.xml
@@ -36,7 +36,7 @@
                 android:layout_margin="8dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:src="@android:drawable/ic_menu_camera"
-                android:tint="@android:color/white"
+                android:tint="@color/colorTexto"
                 android:contentDescription="Cambiar imagen" />
         </FrameLayout>
 
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nombre de la Playlist"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:textColorHint="@android:color/darker_gray"
             android:backgroundTint="@color/colorGris"
             android:padding="12dp"
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Privada"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorTexto"
                 android:textSize="16sp"
                 android:layout_marginEnd="12dp" />
 
@@ -83,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Crear Playlist"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:backgroundTint="@color/colorVerdeSpotify"
             android:textAllCaps="false"
             android:textSize="16sp"
