--- a/DeezerProyecto/app/src/main/res/layout/fragment_detalle_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_detalle_playlist.xml
@@ -31,7 +31,7 @@
             android:text="Nombre de la Playlist"
             android:textSize="22sp"
             android:textStyle="bold"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:layout_marginBottom="4dp" />
 
         <!-- Estado privacidad -->
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:text="Pública"
             android:textSize="14sp"
-            android:textColor="#AAAAAA"
+            android:textColor="@color/colorTexto"
             android:layout_marginBottom="12dp" />
 
         <!-- Botón editar -->
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Editar Playlist"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:backgroundTint="@color/colorVerdeSpotify"
             android:layout_marginBottom="16dp"
             android:visibility="visible" />
@@ -84,7 +84,7 @@
             android:text="Comentarios"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="8dp" />
 
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="Escribe un comentario..."
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorTexto"
                 android:textColorHint="@android:color/darker_gray" />
 
             <Button
