--- a/DeezerProyecto/app/src/main/res/layout/fragment_detalle_playlist_amigo.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_detalle_playlist_amigo.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Pública"
             android:textSize="16sp"
-            android:textColor="@color/colorGris"
+            android:textColor="@color/colorTexto"
             android:layout_marginBottom="12dp" />
 
         <!-- Canciones -->
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="Escribe un comentario..."
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorTexto"
                 android:textColorHint="@android:color/darker_gray" />
 
             <Button
