--- a/DeezerProyecto/app/src/main/res/layout/fragment_perfil_amigo.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_perfil_amigo.xml
@@ -33,7 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nombre del amigo"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorTextoGeneral"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Playlists públicas"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginStart="24dp"
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Últimos artistas escuchados"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:textSize="16sp"
             android:textStyle="bold"
             android:layout_marginStart="24dp"
