--- a/DeezerProyecto/app/src/main/res/layout/fragment_top_playlists.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_top_playlists.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Top Playlists"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTexto"
         android:textSize="22sp"
         android:textStyle="bold"
         android:layout_marginBottom="12dp" />
