--- a/DeezerProyecto/app/src/main/res/layout/item_album.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_album.xml
@@ -18,7 +18,7 @@
         android:id="@+id/tituloAlbum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTextoGeneral"
         android:textSize="14sp"
         android:textStyle="bold"
         android:layout_marginTop="4dp"
