--- a/DeezerProyecto/app/src/main/res/layout/item_artista_escuchado.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_artista_escuchado.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTexto"
         android:textSize="12sp"
         android:layout_marginTop="6dp" />
 </LinearLayout>
