--- a/DeezerProyecto/app/src/main/res/layout/item_cancion_descubrimiento_album.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_cancion_descubrimiento_album.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Título"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:textStyle="bold"
             android:textSize="16sp"
             android:maxLines="1"
