--- a/DeezerProyecto/app/src/main/res/layout/item_cancion_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_cancion_playlist.xml
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nombre del Artista"
-            android:textColor="@color/colorGris"
+            android:textColor="@color/colorTexto"
             android:textSize="12sp" />
     </LinearLayout>
 
@@ -46,6 +46,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:background="?android:attr/selectableItemBackground"
+        android:tint="@color/colorBotonReproducir"
         android:src="@android:drawable/ic_media_play"
         android:contentDescription="Reproducir canción" />
 
