--- a/DeezerProyecto/app/src/main/res/layout/item_playlist_dialog.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_playlist_dialog.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:text="Nombre de Playlist"
             android:textSize="16sp"
-            android:textColor="@android:color/white"
+            android:textColor="@color/colorTexto"
             android:textStyle="bold"/>
 
         <TextView
