--- a/DeezerProyecto/app/src/main/res/layout/item_top_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/item_top_playlist.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre Playlist"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTextoGeneral"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0 me gusta"
-        android:textColor="#BBBBBB"
+        android:textColor="@color/colorGris"
         android:textSize="14sp"
         android:layout_marginTop="2dp" />
 </LinearLayout>
