--- a/DeezerProyecto/app/src/main/res/layout/layout_dialog_elegir_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/layout_dialog_elegir_playlist.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mis Playlists"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorTexto"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginBottom="16dp"/>
