--- a/DeezerProyecto/app/src/main/res/values-night/themes.xml
+++ b/DeezerProyecto/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.DeezerProyecto" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Theme.DeezerProyecto" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Colores principales -->
+        <item name="colorPrimary">@color/colorVerdeSpotify</item>
+        <item name="colorPrimaryVariant">@color/colorVerdeOscuro</item>
+        <item name="colorOnPrimary">@android:color/black</item>
+        <item name="colorSecondary">@color/colorGris</item>
+        <item name="android:colorBackground">@color/colorFondo</item>
+        <item name="android:textColor">@android:color/white</item>
+
+        <!-- Compatibilidad con componentes Material -->
+        <item name="android:statusBarColor">@color/colorFondo</item>
+        <item name="android:navigationBarColor">@color/colorFondo</item>
+        <item name="android:windowLightStatusBar">false</item>
+
+        <!-- Botones e inputs -->
+        <item name="editTextColor">@android:color/white</item>
+        <item name="android:textColorHint">#FFFFFF</item>
     </style>
 </resources>
