--- a/DeezerProyecto/app/src/main/res/values/colors.xml
+++ b/DeezerProyecto/app/src/main/res/values/colors.xml
@@ -2,8 +2,19 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorFondo">#121212</color>
-    <color name="colorTexto">#FFFFFF</color>
+
+    <color name="colorFondo">#FFFFFF</color>
+    <color name="colorTexto">#000000</color>
+
     <color name="colorVerdeSpotify">#1DB954</color>
-    <color name="colorGris">#B3B3B3</color>
+    <color name="colorVerdeOscuro">#15803D</color>
+
+    <color name="colorGris">#EEEEEE</color>
+    <color name="colorEnlaceRegistro">#FF000000</color>
+    <color name="colorTituloApp">#000000</color>         <!-- Negro para texto en tema claro -->
+    <color name="colorTextoBoton">#FFFFFF</color>        <!-- Texto blanco en botones oscuros -->
+    <color name="colorFondoBoton">#000000</color>        <!-- Botón negro -->
+    <color name="colorTextoGeneral">#FFFFFF</color>
+    <color name="colorBotonReproducir">#1DB954</color>
+
 </resources>
