--- a/DeezerProyecto/app/src/main/res/layout/activity_register.xml
+++ b/DeezerProyecto/app/src/main/res/layout/activity_register.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Correo electrónico"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/colorTexto"
+                android:textColor="@color/colorTextoGeneral"
                 android:textColorHint="@color/colorGris"
                 android:background="@drawable/fondo_campo_redondeado"
                 android:padding="14dp"
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Contraseña"
                 android:inputType="textPassword"
-                android:textColor="@color/colorTexto"
+                android:textColor="@color/colorTextoGeneral"
                 android:textColorHint="@color/colorGris"
                 android:background="@drawable/fondo_campo_redondeado"
                 android:padding="14dp"
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Repetir contraseña"
                 android:inputType="textPassword"
-                android:textColor="@color/colorTexto"
+                android:textColor="@color/colorTextoGeneral"
                 android:textColorHint="@color/colorGris"
                 android:background="@drawable/fondo_campo_redondeado"
                 android:padding="14dp"
