--- a/DeezerProyecto/app/src/main/res/layout/fragment_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_playlist.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="25dp"
     android:background="@color/colorFondo"
     android:padding="24dp"
     android:fillViewport="true">
@@ -12,8 +13,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal">
-
-        <!-- Imagen con botón de cámara -->
         <FrameLayout
             android:layout_width="160dp"
             android:layout_height="160dp"
@@ -41,7 +40,6 @@
                 android:contentDescription="Cambiar imagen" />
         </FrameLayout>
 
-        <!-- Campo de nombre -->
         <EditText
             android:id="@+id/campoNombrePlaylist"
             android:layout_width="match_parent"
@@ -53,7 +51,6 @@
             android:padding="12dp"
             android:layout_marginBottom="20dp" />
 
-        <!-- Switch de privacidad -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,8 +74,6 @@
                 android:thumbTint="@color/colorVerdeSpotify"
                 android:trackTint="@color/colorGris" />
         </LinearLayout>
-
-        <!-- Botón para crear -->
         <Button
             android:id="@+id/botonCrearPlaylist"
             android:layout_width="match_parent"
