--- a/DeezerProyecto/app/src/main/res/layout/activity_register.xml
+++ b/DeezerProyecto/app/src/main/res/layout/activity_register.xml
@@ -15,6 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
             android:orientation="vertical"
             android:padding="32dp"
             android:gravity="center_horizontal">
@@ -29,7 +30,6 @@
                 android:background="@drawable/borde_redondo"
                 android:clipToOutline="true" />
 
-            <!-- Campo correo -->
             <EditText
                 android:id="@+id/campoCorreo"
                 android:layout_width="match_parent"
@@ -44,7 +44,6 @@
                 android:drawablePadding="10dp"
                 android:layout_marginBottom="16dp" />
 
-            <!-- Contraseña -->
             <EditText
                 android:id="@+id/campoContrasena"
                 android:layout_width="match_parent"
@@ -59,7 +58,6 @@
                 android:drawablePadding="10dp"
                 android:layout_marginBottom="16dp" />
 
-            <!-- Repetir contraseña -->
             <EditText
                 android:id="@+id/campoRepetirContrasena"
                 android:layout_width="match_parent"
@@ -74,7 +72,6 @@
                 android:drawablePadding="10dp"
                 android:layout_marginBottom="24dp" />
 
-            <!-- Botón registrar -->
             <Button
                 android:id="@+id/botonRegistrar"
                 android:layout_width="match_parent"
