--- a/DeezerProyecto/app/src/main/res/layout/fragment_biblioteca.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_biblioteca.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="25dp"
     android:orientation="vertical"
     android:background="@color/colorFondo"
     android:padding="16dp">
 
-    <!-- 🧭 Título -->
     <TextView
         android:id="@+id/tituloBiblioteca"
         android:layout_width="wrap_content"
@@ -18,7 +18,6 @@
         android:textStyle="bold"
         android:layout_marginBottom="8dp" />
 
-    <!-- 🔍 Buscador -->
     <EditText
         android:id="@+id/campoBusqueda"
         android:layout_width="match_parent"
@@ -31,7 +30,6 @@
         android:padding="12dp"
         android:layout_marginBottom="12dp" />
 
-    <!-- 📜 Lista de playlists -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerPlaylists"
         android:layout_width="match_parent"
@@ -40,7 +38,6 @@
         android:paddingTop="8dp"
         android:clipToPadding="false" />
 
-    <!-- ➕ Botón flotante -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddPlaylist"
         android:layout_width="wrap_content"
