--- a/DeezerProyecto/app/src/main/res/layout/fragment_buscar.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_buscar.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="25dp"
     android:orientation="vertical"
     android:background="@color/colorFondo"
     android:fillViewport="true">
 
-    <!-- CABECERA BUSCADOR -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,8 +36,6 @@
             android:backgroundTint="@color/colorVerdeSpotify"
             android:textColor="@color/colorTexto"/>
     </LinearLayout>
-
-    <!-- CONTENIDO -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
