--- a/DeezerProyecto/app/src/main/res/layout/fragment_detalle_album.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_detalle_album.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="35dp"
     android:background="@color/colorFondo"
     android:fillViewport="true">
 
@@ -11,7 +12,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Imagen del álbum con degradado -->
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="300dp">
@@ -29,7 +29,6 @@
                 android:background="@drawable/degradado_inferior" />
         </FrameLayout>
 
-        <!-- Info del álbum -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +55,6 @@
                 android:layout_marginBottom="20dp" />
         </LinearLayout>
 
-        <!-- Lista de canciones -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerCancionesAlbum"
             android:layout_width="match_parent"
