--- a/DeezerProyecto/app/src/main/res/layout/fragment_detalle_artista.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_detalle_artista.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="35dp"
     android:background="@color/colorFondo"
     android:fillViewport="true">
 
@@ -11,7 +12,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Imagen del artista con nombre y seguidores -->
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="300dp">
@@ -55,14 +55,12 @@
             </LinearLayout>
         </FrameLayout>
 
-        <!-- Secciones de contenido -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp">
 
-            <!-- Top Canciones -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -79,7 +77,6 @@
                 android:nestedScrollingEnabled="false"
                 android:layout_marginBottom="24dp" />
 
-            <!-- Discografía -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
