--- a/DeezerProyecto/app/src/main/res/layout/fragment_detalle_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_detalle_playlist.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="25dp"
     android:background="@color/colorFondo"
     android:padding="16dp"
     android:fillViewport="true">
@@ -12,7 +13,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Imagen portada -->
         <ImageView
             android:id="@+id/imagenPlaylist"
             android:layout_width="match_parent"
@@ -23,7 +23,6 @@
             android:clipToOutline="true"
             android:contentDescription="Imagen de la Playlist" />
 
-        <!-- Nombre de la playlist -->
         <TextView
             android:id="@+id/nombrePlaylist"
             android:layout_width="wrap_content"
@@ -34,7 +33,6 @@
             android:textColor="@color/colorTexto"
             android:layout_marginBottom="4dp" />
 
-        <!-- Estado privacidad -->
         <TextView
             android:id="@+id/textoPrivacidad"
             android:layout_width="wrap_content"
@@ -44,7 +42,6 @@
             android:textColor="@color/colorTexto"
             android:layout_marginBottom="12dp" />
 
-        <!-- Botón editar -->
         <Button
             android:id="@+id/botonEditar"
             android:layout_width="match_parent"
@@ -55,7 +52,6 @@
             android:layout_marginBottom="16dp"
             android:visibility="visible" />
 
-        <!-- Lista vacía -->
         <TextView
             android:id="@+id/textoVacio"
             android:layout_width="match_parent"
@@ -67,7 +63,6 @@
             android:layout_marginBottom="16dp"
             android:visibility="gone" />
 
-        <!-- Recycler canciones -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerCanciones"
             android:layout_width="match_parent"
@@ -76,7 +71,6 @@
             android:padding="8dp"
             android:clipToPadding="false" />
 
-        <!-- Sección comentarios -->
         <TextView
             android:id="@+id/tituloComentarios"
             android:layout_width="wrap_content"
@@ -97,7 +91,6 @@
             android:showDividers="middle"
             android:dividerPadding="4dp" />
 
-        <!-- Campo de nuevo comentario -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
