--- a/DeezerProyecto/app/src/main/res/layout/fragment_detalle_playlist_amigo.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_detalle_playlist_amigo.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="25dp"
     android:background="@color/colorFondo"
     android:padding="16dp"
     android:fillViewport="true">
@@ -12,7 +13,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Imagen de la playlist del amigo -->
         <ImageView
             android:id="@+id/imagenPlaylistAmigo"
             android:layout_width="match_parent"
@@ -22,7 +22,6 @@
             android:background="@drawable/borde_redondo"
             android:contentDescription="Imagen de la Playlist" />
 
-        <!-- Nombre -->
         <TextView
             android:id="@+id/nombrePlaylistAmigo"
             android:layout_width="wrap_content"
@@ -33,7 +32,6 @@
             android:textColor="@color/colorTexto"
             android:layout_marginBottom="4dp" />
 
-        <!-- Privacidad -->
         <TextView
             android:id="@+id/textoPrivacidadAmigo"
             android:layout_width="wrap_content"
@@ -43,7 +41,6 @@
             android:textColor="@color/colorTexto"
             android:layout_marginBottom="12dp" />
 
-        <!-- Canciones -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerCancionesAmigo"
             android:layout_width="match_parent"
@@ -52,7 +49,6 @@
             android:padding="8dp"
             android:layout_marginBottom="20dp" />
 
-        <!-- Comentarios -->
         <TextView
             android:id="@+id/tituloComentariosAmigo"
             android:layout_width="wrap_content"
@@ -72,7 +68,6 @@
             android:showDividers="middle"
             android:dividerPadding="4dp" />
 
-        <!-- Campo para escribir comentario -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
