--- a/DeezerProyecto/app/src/main/res/drawable/fondo_barra.xml
+++ b/DeezerProyecto/app/src/main/res/drawable/fondo_barra.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#CC000000" /> <!-- Negro con 80% opacidad -->
+    <solid android:color="#CC000000" />
     <corners android:radius="16dp" />
 </shape>
