--- a/DeezerProyecto/app/src/main/res/layout/fragment_top_playlists.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_top_playlists.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:background="@color/colorFondo"
     android:padding="16dp">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,5 +19,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerTopPlaylists"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <ProgressBar
+        android:id="@+id/progressBarTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
 </LinearLayout>
