--- a/DeezerProyecto/app/src/main/res/layout/fragment_biblioteca.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_biblioteca.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="25dp"
@@ -28,6 +27,25 @@
         android:backgroundTint="@color/colorGris"
         android:drawableStart="@android:drawable/ic_menu_search"
         android:padding="12dp"
+        android:layout_marginBottom="12dp" />
+
+    <TextView
+        android:id="@+id/textoVacio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No tienes playlists aún"
+        android:textSize="16sp"
+        android:textColor="@color/colorTexto"
+        android:gravity="center"
+        android:visibility="gone"
+        android:layout_marginBottom="8dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBarBiblioteca"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
         android:layout_marginBottom="12dp" />
 
     <androidx.recyclerview.widget.RecyclerView
