--- a/DeezerProyecto/app/src/main/res/layout/fragment_buscar_amigos.xml
+++ b/DeezerProyecto/app/src/main/res/layout/fragment_buscar_amigos.xml
@@ -34,4 +34,11 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <ProgressBar
+        android:id="@+id/progressBarBusqueda"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
 </LinearLayout>
