--- a/DeezerProyecto/app/src/main/res/layout/layout_dialog_elegir_playlist.xml
+++ b/DeezerProyecto/app/src/main/res/layout/layout_dialog_elegir_playlist.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:background="@color/colorFondo"
     android:padding="16dp">
+
     <TextView
         android:id="@+id/tituloMisPlaylists"
         android:layout_width="wrap_content"
@@ -15,10 +16,19 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginBottom="16dp"/>
+
+    <TextView
+        android:id="@+id/textoVacio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No tienes playlists aún"
+        android:textColor="@color/colorGris"
+        android:visibility="gone"
+        android:layout_marginBottom="12dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerPlaylists"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:overScrollMode="never"/>
-
 </LinearLayout>
